fixed menu icon alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -221,3 +221,7 @@ div.form-container {
     display: flex;
     flex-direction: column;
 }
+
+.mat-icon {
+    vertical-align: middle;
+}
